Fixed UI & Navigation

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .tx-brand-01 {
-  color: #3E8CFF !important;
+  color: #5FA744 !important;
 }
 
 .tx-brand-02 {
@@ -71,7 +71,7 @@ body {
 }
 
 .bg-brand-01 {
-  color: #3E8CFF !important;
+  color: #5FA744 !important;
 }
 
 .bg-brand-02 {
@@ -95,7 +95,7 @@ body {
   position: fixed;
   bottom: 2rem;
   right: 2rem;
-  border: 1px solid #3E8CFF;
+  border: 1px solid #5FA744;
   border-radius: 25%;
   cursor: pointer;
   z-index: 1;
@@ -116,7 +116,12 @@ body {
   border: 1px solid #fafafa;
   border-radius: 0.5rem;
   color: #ffffff;
-  background-color: #3E8CFF;
+  background-color: #5FA744;
+}
+
+.btn-primary {
+    background-color: #5FA744;
+    border-color: #5FA744;
 }
 
 @media only screen and (max-width: 991px) {
